// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeavePeriodReducedSchedule renders the page with bonding leave content 1`] = `
<QuestionPage
  onSave={[Function]}
  title="Leave details"
>
  <InputChoiceGroup
    choices={
      Array [
        Object {
          "checked": false,
          "label": "Yes",
          "value": "true",
        },
        Object {
          "checked": false,
          "label": "No",
          "value": "false",
        },
      ]
    }
    hint={null}
    label="Do you need to work fewer hours than usual for a period of time (reduced leave schedule)?"
    name="has_reduced_schedule_leave_periods"
    onChange={[Function]}
    type="radio"
    value=""
  />
  <ConditionalContent
    clearField={[Function]}
    fieldNamesClearedWhenHidden={
      Array [
        "leave_details.reduced_schedule_leave_periods",
      ]
    }
    getField={[Function]}
    updateFields={[Function]}
    visible={null}
  >
    <Heading
      level="2"
      size="1"
    >
      Enter the start and end dates for your reduced leave schedule.
    </Heading>
    <Lead>
      <Trans
        i18nKey="pages.claimsLeavePeriodReducedSchedule.datesLead"
        tOptions={
          Object {
            "context": "bonding",
          }
        }
      />
    </Lead>
    <div
      className="measure-6"
    >
      <Details
        label="Do you work in an acute care hospital or the teaching hospital of the University of Massachusetts Medical School?"
      >
        <Trans
          components={
            Object {
              "emergency-bonding-regs-worker-link": <a
                href="https://www.mass.gov/pfml-acute-claimant"
                rel="noopener"
                target="_blank"
              />,
            }
          }
          i18nKey="pages.claimsLeavePeriodReducedSchedule.bondingRegsDetailsSummary"
        />
      </Details>
    </div>
    <InputDate
      dayLabel="Day"
      example="mm / dd / yyyy"
      label="First day of leave"
      monthLabel="Month"
      name="leave_details.reduced_schedule_leave_periods[0].start_date"
      onChange={[Function]}
      smallLabel={true}
      value=""
      yearLabel="Year"
    />
    <InputDate
      dayLabel="Day"
      example="mm / dd / yyyy"
      label="Last day of leave"
      monthLabel="Month"
      name="leave_details.reduced_schedule_leave_periods[0].end_date"
      onChange={[Function]}
      smallLabel={true}
      value=""
      yearLabel="Year"
    />
  </ConditionalContent>
</QuestionPage>
`;

exports[`LeavePeriodReducedSchedule renders the page with bonding leave content 2`] = `
Array [
  "If you have already taken some or all of your family leave in 2021, tell us the first day you missed work this year, and the last day you expect to be on leave.",
  <br
    key="br-1"
  />,
  <br
    key="br-2"
  />,
  "Your paid leave must end before the child’s first birthday or the one year anniversary of when they arrived in your home (for foster care and adoption).",
]
`;

exports[`LeavePeriodReducedSchedule renders the page with bonding leave content 3`] = `
Array [
  "If you had a child join your family in 2020, you may be eligible for paid leave anytime in 2021. ",
  <a
    href="https://www.mass.gov/pfml-acute-claimant"
    key="1"
    rel="noopener"
    target="_blank"
  >
    Learn more about emergency Covid-19 regulations for hospital workers.
  </a>,
]
`;

exports[`LeavePeriodReducedSchedule renders the page with medical leave content 1`] = `
<QuestionPage
  onSave={[Function]}
  title="Leave details"
>
  <Alert
    neutral={true}
    state="info"
  >
    You will need a completed Certification of a Serious Health Condition form for this section.
  </Alert>
  <InputChoiceGroup
    choices={
      Array [
        Object {
          "checked": false,
          "label": "Yes",
          "value": "true",
        },
        Object {
          "checked": false,
          "label": "No",
          "value": "false",
        },
      ]
    }
    hint="Your answer must match Question 26 in the Certification of a Serious Health Condition form."
    label="Do you need to work fewer hours than usual for a period of time (reduced leave schedule)?"
    name="has_reduced_schedule_leave_periods"
    onChange={[Function]}
    type="radio"
    value=""
  />
  <ConditionalContent
    clearField={[Function]}
    fieldNamesClearedWhenHidden={
      Array [
        "leave_details.reduced_schedule_leave_periods",
      ]
    }
    getField={[Function]}
    updateFields={[Function]}
    visible={null}
  >
    <Heading
      level="2"
      size="1"
    >
      Enter the start and end dates for your reduced leave schedule.
    </Heading>
    <Lead>
      <Trans
        i18nKey="pages.claimsLeavePeriodReducedSchedule.datesLead"
        tOptions={
          Object {
            "context": "medical",
          }
        }
      />
    </Lead>
    <InputDate
      dayLabel="Day"
      example="mm / dd / yyyy"
      label="First day of leave"
      monthLabel="Month"
      name="leave_details.reduced_schedule_leave_periods[0].start_date"
      onChange={[Function]}
      smallLabel={true}
      value=""
      yearLabel="Year"
    />
    <InputDate
      dayLabel="Day"
      example="mm / dd / yyyy"
      label="Last day of leave or re‑evaluation date"
      monthLabel="Month"
      name="leave_details.reduced_schedule_leave_periods[0].end_date"
      onChange={[Function]}
      smallLabel={true}
      value=""
      yearLabel="Year"
    />
  </ConditionalContent>
</QuestionPage>
`;

exports[`LeavePeriodReducedSchedule renders the page with medical leave content 2`] = `
Array [
  "If you have already taken leave for this condition in 2021, tell us the first day you missed work this year, and the last day you expect to be on leave.",
  <br
    key="br-1"
  />,
  <br
    key="br-2"
  />,
  "Your answer must match Question 32 in the Certification of a Serious Health Condition form .",
]
`;
